# rover

./: .gitignore  LICENSE  README.md  development.txt  make-help.docs.sh  pyproject.toml  setup.py
dev/: README.md  bootstrap-robot-tests.sh  bug-urllib.sh  help-docs.sh  install-py23-in-env2.bat  install-py23-in-env2.sh  install-py23-in-env3.sh  install-py3-in-env3.bat  install-py3-in-env3.sh  install-py3.sh  make-env-py2.sh  make-env2.bat  make-env2.sh  make-env3.bat  make-env3.sh  make-help.docs.sh  make-py23-tarball.sh  mkenv3.sh  new-version.sh  rover  rover2  run-all-nose-tests.sh  run-all-robot-tests.sh  run-all-tests.sh  run-nose-tests-py2-on-py23.sh  run-nose-tests-py23-in-env2.sh  run-nose-tests-py23-in-env3.sh  run-nose-tests-py3-in-env3.bat  run-nose-tests-py3-in-env3.sh  run-nose-tests-py3-on-py23.sh  run-nose-tests-py3-on-py3.sh  run-nose-tests.sh  run-nose-tests2.sh  run-nose-tests3.sh  run-robot-tests-py2-on-py23.sh  run-robot-tests-py23-in-env2.sh  run-robot-tests-py23-in-env3.sh  run-robot-tests-py3-in-env3.bat  run-robot-tests-py3-in-env3.sh  run-robot-tests-py3-on-py23.sh  (+8 more)
doc/: maintenance.md  pipeline.md  reliability.md
docs/: README.txt  _config.yml  bugs.md  changelog.md  commands.md  commands_legacy.md  commands_verbose.md  compact.md  configuration.md  development.md  download.md  download_legacy.md  github-corner.html  index.md  introduction.md  maintenance.md  mseedindex.md  pipeline.md  reliability.md
rover/: VERSION  __init__.py  __main__.py  args.py  asdf.py  compact.py  config.py  coverage.py  coverage2.py  daemon.py  download.py  web.py  (+22 more)
(+80 files in other folders)
